--- a/test.css
+++ b/test.css
@@ -1,27 +1,105 @@
 body {
-    font-family: Arial, sans-serif;
-    text-align: center;
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #1c1c1c;
+    color: #fff;
 }
 
-h1 {
-    color: #333;
-}
-
-button {
-    background-color: #008CBA;
-    color: white;
+.header {
+    background-color: #0c0c0c;
     padding: 10px 20px;
-    border: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo img {
+    width: 100px; /* 로고 이미지의 원하는 크기로 조절 */
+    height: auto;
+}
+
+.navbar {
+    display: flex;
+    justify-content: center; /* 텍스트를 수평으로 가운데 정렬 */
+    align-items: center; /* 텍스트를 수직으로 가운데 정렬 */
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.navbar a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 20px;
+    font-size: 18px;
+    white-space: nowrap;
+}
+.navbar a:hover {
+    background-color: rgba(255, 255, 255, 0.1); /* 옅은 색의 네모칸을 표시하는 색상 */
+    border-radius: 6px; /* 모서리를 둥글게 만듦 */
+    padding: 12px 24px;
+}
+.signup {
+    background-color: #4CAF50;
+    padding: 10px 20px;
+    border-radius: 6px;
+    color: #fff;
+}
+
+.account {
+    position: relative;
     cursor: pointer;
+    padding: 5px 5px;
 }
-
-button:hover {
-    background-color: #005F7A;
-}
-
-#gameArea {
-    width: 100%;
-    height: 300px;
-    background-color: #ddd;
+.account-menu {
+    position: absolute;
+    top: 50px;
+    right: 0;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 6px;
     display: none;
+    flex-direction: column;
+}
+
+.account-menu a {
+    color: #333;
+    padding: 10px 20px;
+    text-decoration: none;
+    display: block;
+    white-space: nowrap;
+}
+
+.account img {
+    width: 40px; /* 계정 로고 이미지 크기 조절 */
+    height: auto;
+}
+
+.account:hover .account-menu,
+.account-menu:hover {
+    display: flex;
+    flex-direction: column;
+}
+
+.account:hover a:hover,
+.account-menu a:hover {
+    background-color: rgba(0, 0, 0, 0.1); /* 옅은 색의 네모칸을 표시하는 색상 */
+}
+
+.main-content {
+    max-width: 1200px;
+    margin: 20px auto;
+    padding: 20px;
+}
+
+.footer {
+    background-color: #0c0c0c;
+    padding: 10px 0;
+}
+
+.footer p {
+    margin: 0;
+    text-align: center;
+    color: #fff;
 }
